# Mushroom-Generator

./: DEVLOG.md  QtMainWidget.ui  README.md  main.py  pyproject.toml
src/mushroomgen/: __init__.py
src/mushroomgen/core/: build.py  species.py
src/mushroomgen/generators/: curves.py  geometry.py  noiseFields.py
src/mushroomgen/render/: Gl_debug_helper.py  openGl.py  viewer.py
src/mushroomgen/render/shaders/: Fragment.glsl  Vertex.glsl
tests/: test_build.py  test_curves.py  test_geometry.py
